--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
 
 .grid-2{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 1fr 4fr;
 }
 
 body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #101214;
+    background-color: #f0f0f0;
     color: #7A7C80;
 
 }
 
-h2,.white{
-    color: #fff;
+h2,.black{
+    color: #000;
 }
 
 a{
@@ -25,7 +25,7 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 40vh;
+    padding-top: 10vh;
     text-align: center;
 }
 
@@ -46,7 +46,7 @@ a{
 }
 /* section 2 */
 .section-2{
-    padding-top: 10vh;
+    padding-top: 5vh;
     width: 70%;
 }
 
@@ -66,12 +66,12 @@ a{
     padding: 5px;
     font-size: 1.2rem;
     padding-left: 0;
-    width: 100px;
+    width: 200px;
 }
 /* animations / utilities */
 .section-2 a:hover{
     font-size: 1.3rem;
-    color: #fff;
+    color: #101214;
     cursor: pointer;
     transition: 0.2s;
 }
@@ -82,11 +82,6 @@ a{
     transition: 0.3s;
 }
 
-.white:hover{
-    position: relative;
-    padding-left: 10px;
-}
-
 /* media queres */
 @media(max-width:780px){
     .grid-2{
@@ -94,7 +89,7 @@ a{
     }
     .section-1{
         padding:0;
-        padding-top: 5rem;
+        padding-top: 3rem;
     }
     .section-2{
         padding: 0;
