--- a/style.css
+++ b/style.css
@@ -67,8 +67,20 @@ a{
     padding-left: 0;
     width: 500px;
 }
+.section-2 a1{
+    padding: 5px;
+    font-size: 1.2rem;
+    padding-left: 0;
+    width: 500px;
+}
 /* animations / utilities */
 .section-2 a:hover{
+    font-size: 1.3rem;
+    color: #101214;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.section-2 a1:hover{
     font-size: 1.3rem;
     color: #101214;
     cursor: pointer;
